Fixed assignment title size on smaller screens

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -606,7 +606,13 @@ video {
 .assignments-grid {
   display: grid;
   grid-template-columns: 300px 1fr;
-  grid-column-gap: 160px;
+  grid-column-gap: 120px;
+}
+
+@media (min-width: 1280px) {
+  .assignments-grid {
+    grid-column-gap: 160px;
+  }
 }
 
 .assignments-list {
@@ -5322,8 +5328,76 @@ video {
   min-width: 0;
 }
 
-.min-w-full{
-  min-width: 100%;
+.min-w-1{
+  min-width: 0.25rem;
+}
+
+.min-w-2{
+  min-width: 0.5rem;
+}
+
+.min-w-3{
+  min-width: 0.75rem;
+}
+
+.min-w-4{
+  min-width: 1rem;
+}
+
+.min-w-5{
+  min-width: 1.25rem;
+}
+
+.min-w-6{
+  min-width: 1.5rem;
+}
+
+.min-w-8{
+  min-width: 2rem;
+}
+
+.min-w-10{
+  min-width: 2.5rem;
+}
+
+.min-w-12{
+  min-width: 3rem;
+}
+
+.min-w-16{
+  min-width: 4rem;
+}
+
+.min-w-20{
+  min-width: 5rem;
+}
+
+.min-w-24{
+  min-width: 6rem;
+}
+
+.min-w-32{
+  min-width: 8rem;
+}
+
+.min-w-40{
+  min-width: 10rem;
+}
+
+.min-w-48{
+  min-width: 12rem;
+}
+
+.min-w-56{
+  min-width: 14rem;
+}
+
+.min-w-64{
+  min-width: 16rem;
+}
+
+.min-w-px{
+  min-width: 1px;
 }
 
 .object-contain{
@@ -16093,8 +16167,76 @@ video {
     min-width: 0;
   }
 
-  .sm\:min-w-full{
-    min-width: 100%;
+  .sm\:min-w-1{
+    min-width: 0.25rem;
+  }
+
+  .sm\:min-w-2{
+    min-width: 0.5rem;
+  }
+
+  .sm\:min-w-3{
+    min-width: 0.75rem;
+  }
+
+  .sm\:min-w-4{
+    min-width: 1rem;
+  }
+
+  .sm\:min-w-5{
+    min-width: 1.25rem;
+  }
+
+  .sm\:min-w-6{
+    min-width: 1.5rem;
+  }
+
+  .sm\:min-w-8{
+    min-width: 2rem;
+  }
+
+  .sm\:min-w-10{
+    min-width: 2.5rem;
+  }
+
+  .sm\:min-w-12{
+    min-width: 3rem;
+  }
+
+  .sm\:min-w-16{
+    min-width: 4rem;
+  }
+
+  .sm\:min-w-20{
+    min-width: 5rem;
+  }
+
+  .sm\:min-w-24{
+    min-width: 6rem;
+  }
+
+  .sm\:min-w-32{
+    min-width: 8rem;
+  }
+
+  .sm\:min-w-40{
+    min-width: 10rem;
+  }
+
+  .sm\:min-w-48{
+    min-width: 12rem;
+  }
+
+  .sm\:min-w-56{
+    min-width: 14rem;
+  }
+
+  .sm\:min-w-64{
+    min-width: 16rem;
+  }
+
+  .sm\:min-w-px{
+    min-width: 1px;
   }
 
   .sm\:object-contain{
@@ -26865,8 +27007,76 @@ video {
     min-width: 0;
   }
 
-  .md\:min-w-full{
-    min-width: 100%;
+  .md\:min-w-1{
+    min-width: 0.25rem;
+  }
+
+  .md\:min-w-2{
+    min-width: 0.5rem;
+  }
+
+  .md\:min-w-3{
+    min-width: 0.75rem;
+  }
+
+  .md\:min-w-4{
+    min-width: 1rem;
+  }
+
+  .md\:min-w-5{
+    min-width: 1.25rem;
+  }
+
+  .md\:min-w-6{
+    min-width: 1.5rem;
+  }
+
+  .md\:min-w-8{
+    min-width: 2rem;
+  }
+
+  .md\:min-w-10{
+    min-width: 2.5rem;
+  }
+
+  .md\:min-w-12{
+    min-width: 3rem;
+  }
+
+  .md\:min-w-16{
+    min-width: 4rem;
+  }
+
+  .md\:min-w-20{
+    min-width: 5rem;
+  }
+
+  .md\:min-w-24{
+    min-width: 6rem;
+  }
+
+  .md\:min-w-32{
+    min-width: 8rem;
+  }
+
+  .md\:min-w-40{
+    min-width: 10rem;
+  }
+
+  .md\:min-w-48{
+    min-width: 12rem;
+  }
+
+  .md\:min-w-56{
+    min-width: 14rem;
+  }
+
+  .md\:min-w-64{
+    min-width: 16rem;
+  }
+
+  .md\:min-w-px{
+    min-width: 1px;
   }
 
   .md\:object-contain{
@@ -37637,8 +37847,76 @@ video {
     min-width: 0;
   }
 
-  .lg\:min-w-full{
-    min-width: 100%;
+  .lg\:min-w-1{
+    min-width: 0.25rem;
+  }
+
+  .lg\:min-w-2{
+    min-width: 0.5rem;
+  }
+
+  .lg\:min-w-3{
+    min-width: 0.75rem;
+  }
+
+  .lg\:min-w-4{
+    min-width: 1rem;
+  }
+
+  .lg\:min-w-5{
+    min-width: 1.25rem;
+  }
+
+  .lg\:min-w-6{
+    min-width: 1.5rem;
+  }
+
+  .lg\:min-w-8{
+    min-width: 2rem;
+  }
+
+  .lg\:min-w-10{
+    min-width: 2.5rem;
+  }
+
+  .lg\:min-w-12{
+    min-width: 3rem;
+  }
+
+  .lg\:min-w-16{
+    min-width: 4rem;
+  }
+
+  .lg\:min-w-20{
+    min-width: 5rem;
+  }
+
+  .lg\:min-w-24{
+    min-width: 6rem;
+  }
+
+  .lg\:min-w-32{
+    min-width: 8rem;
+  }
+
+  .lg\:min-w-40{
+    min-width: 10rem;
+  }
+
+  .lg\:min-w-48{
+    min-width: 12rem;
+  }
+
+  .lg\:min-w-56{
+    min-width: 14rem;
+  }
+
+  .lg\:min-w-64{
+    min-width: 16rem;
+  }
+
+  .lg\:min-w-px{
+    min-width: 1px;
   }
 
   .lg\:object-contain{
@@ -48409,8 +48687,76 @@ video {
     min-width: 0;
   }
 
-  .xl\:min-w-full{
-    min-width: 100%;
+  .xl\:min-w-1{
+    min-width: 0.25rem;
+  }
+
+  .xl\:min-w-2{
+    min-width: 0.5rem;
+  }
+
+  .xl\:min-w-3{
+    min-width: 0.75rem;
+  }
+
+  .xl\:min-w-4{
+    min-width: 1rem;
+  }
+
+  .xl\:min-w-5{
+    min-width: 1.25rem;
+  }
+
+  .xl\:min-w-6{
+    min-width: 1.5rem;
+  }
+
+  .xl\:min-w-8{
+    min-width: 2rem;
+  }
+
+  .xl\:min-w-10{
+    min-width: 2.5rem;
+  }
+
+  .xl\:min-w-12{
+    min-width: 3rem;
+  }
+
+  .xl\:min-w-16{
+    min-width: 4rem;
+  }
+
+  .xl\:min-w-20{
+    min-width: 5rem;
+  }
+
+  .xl\:min-w-24{
+    min-width: 6rem;
+  }
+
+  .xl\:min-w-32{
+    min-width: 8rem;
+  }
+
+  .xl\:min-w-40{
+    min-width: 10rem;
+  }
+
+  .xl\:min-w-48{
+    min-width: 12rem;
+  }
+
+  .xl\:min-w-56{
+    min-width: 14rem;
+  }
+
+  .xl\:min-w-64{
+    min-width: 16rem;
+  }
+
+  .xl\:min-w-px{
+    min-width: 1px;
   }
 
   .xl\:object-contain{
