--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -7,7 +7,13 @@
 .assignments-grid {
   display: grid;
   grid-template-columns: 300px 1fr;
-  grid-column-gap: 160px;
+  grid-column-gap: 120px;
+}
+
+@screen xl {
+  .assignments-grid {
+    grid-column-gap: 160px;
+  }
 }
 
 .assignments-list {
